--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Logo as a Banner -->
 <div id="logo-banner">
-    <a href="#"><img src="attachment_119176701.png" alt="Your Jewelry Store Logo" id="logo"></a>
+    <a href="#"><img src="Bilder/logo/logo.png" alt="Your Jewelry Store Logo" id="logo"></a>
 </div>
 
 <!-- Sticky Navigation -->
@@ -32,13 +32,13 @@
     <section id="featured" class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="jewelry_2023APR12.mobile.webp" alt="Featured Jewelry 1" class="full-width">
+                <img src="Bilder/product/jewelry_2023APR12.mobile.webp" alt="Featured Jewelry 1" class="full-width">
             </div>
             <div class="swiper-slide">
-                <img src="an_assortment_of_assembled_bracelets_made_from_beads_and_charms.webp" alt="Featured Jewelry 1" class="full-width">
+                <img src="Bilder/product/an_assortment_of_assembled_bracelets_made_from_beads_and_charms.webp" alt="Featured Jewelry 1" class="full-width">
             </div>
             <div class="swiper-slide">
-                <img src="maxresdefault.jpg" alt="Featured Jewelry 1" class="full-width">
+                <img src="Bilder/product/WW-5cropped.jpg" alt="Featured Jewelry 1" class="full-width">
             </div>
             <!-- You can add more slides like the above div for more images -->
         </div>
@@ -60,7 +60,7 @@
         <h2>What Our Customers Say</h2>
         <!-- Display a carousel of customer testimonials with images -->
         <div class="testimonial">
-            <img src="WW-5cropped.jpg" alt="Customer Name">
+            <img src="Bilder/product/WW-5cropped.jpg" alt="Customer Name">
             <p>"This jewelry is stunning!" - Jane Doe</p>
         </div>
         <!-- Repeat .testimonial for other testimonials or use a carousel/slider plugin. -->
