Bilder section erstmal entfernt

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 
     <!-- Large Feature Image -->
-    <section id="featured" class="swiper-container">
+    
+    <!-- <section id="featured" class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <img src="Bilder/product/jewelry_2023APR12.mobile.webp" alt="Featured Jewelry 1" class="full-width">
@@ -40,15 +41,14 @@
             <div class="swiper-slide">
                 <img src="Bilder/product/WW-5cropped.jpg" alt="Featured Jewelry 1" class="full-width">
             </div>
-            <!-- You can add more slides like the above div for more images -->
-        </div>
+        </div> -->
         <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-pagination"></div> -->
         <!-- Add Navigation -->
-        <div class="swiper-button-next"></div>
+        <!-- <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
-    </section>
-    
+    </section> -->
+
 
     <!-- Product Grid -->
     <section id="products">
