--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <img id="logo" src="Bilder/logo/attachment_119176701.png" alt="Company Logo">
+    <img id="logo" src="Bilder/logo/Logo_unrau.jpg" alt="Company Logo">
 <!-- Logo as a Banner -->
 <div id="logo-banner">
-    <a href="#"><img src="Bilder/logo/logo.png" alt="Your Jewelry Store Logo" id="logo"></a>
+    <a href="#"><img src="Bilder/logo/Logo_unrau.jpg" alt="Your Jewelry Store Logo" id="logo"></a>
 </div>
 
 <!-- Sticky Navigation -->
